fix layout and scrollbar on intermediate width

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -10,7 +10,7 @@
   display: grid;
   justify-content: center;
 
-  grid-template-columns: repeat(auto-fit, 282px);
+  grid-template-columns: repeat(auto-fit, minmax(min-content, 282px));
 
   grid-gap: 20px 17px;
 }
