--- a/blocks/header.css
+++ b/blocks/header.css
@@ -10,7 +10,7 @@
     padding-right: 20px;
   }
 }
-@media screen and (max-width: 544px) {
+@media screen and (max-width: 800px) {
   .header {
     margin-top: 28px;
     padding-left: 27px;
