--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -74,7 +74,7 @@
     padding-right: 20px;
   }
 }
-@media screen and (max-width: 544px) {
+@media screen and (max-width: 800px) {
   .profile {
     flex-direction: column;
     justify-content: center;
